--- a/IdentityProxy.Api/Dockerfile
+++ b/IdentityProxy.Api/Dockerfile
@@ -1,5 +1,6 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
+
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
@@ -22,7 +23,8 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./IdentityProxy.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
 
-FROM mcr.microsoft.com/dotnet/runtime-deps:8.0 AS final
+FROM mcr.microsoft.com/dotnet/runtime-deps:8.0-jammy-chiseled AS final
+#FROM mcr.microsoft.com/dotnet/runtime-deps:8.0-jammy AS final
 WORKDIR /app
 EXPOSE 8080
 COPY --from=publish /app/publish .
