--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -32,4 +32,4 @@ jobs:
           context: .
           file: ./IdentityProxy.Api/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository}}:${{ steps.tag_name.outputs.TAG_NAME }},ghcr.io/${{ github.repository_owner }}/${{ github.repository}}:latest
+          tags: ghcr.io/${{ github.repository}}:${{ steps.tag_name.outputs.TAG_NAME }},ghcr.io/${{ github.repository}}:latest
