--- a/Testcontainers.IdentityProxy/Testcontainers.IdentityProxy.csproj
+++ b/Testcontainers.IdentityProxy/Testcontainers.IdentityProxy.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Testcontainers.IdentityProxy\Testcontainers.IdentityProxy.csproj" />
+    <PackageReference Include="Testcontainers" Version="3.9.0" />
   </ItemGroup>
 
 </Project>
