--- a/IdentityProxy.Api/Properties/launchSettings.json
+++ b/IdentityProxy.Api/Properties/launchSettings.json
@@ -3,10 +3,11 @@
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "todos",
+      "launchUrl": ".well-known/openid-configuration",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "IDENTITY_AUTHORITY": "https://login.microsoftonline.com/svrooij.io/v2.0/"
+        "IDENTITY_AUTHORITY": "https://login.microsoftonline.com/svrooij.io/v2.0/",
+        "EXTERNAL_URL": "http://localhost:5256"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5256"
