--- a/IdentityProxy.Api/appsettings.json
+++ b/IdentityProxy.Api/appsettings.json
@@ -2,7 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "System.Net.Http.HttpClient": "Warning"
     }
   },
   "AllowedHosts": "*"
