--- a/IdentityProxy.Api/appsettings.json
+++ b/IdentityProxy.Api/appsettings.json
@@ -7,5 +7,6 @@
       "System.Net.Http.HttpClient": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OTEL_SERVICE_NAME": "identity-proxy"
 }
