--- a/IdentityProxy.Api/IdentityProxy.Api.csproj
+++ b/IdentityProxy.Api/IdentityProxy.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,6 +15,12 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.6.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+	<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.3.0" />
+	<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.1" />
+	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.8.1" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.0" />
   </ItemGroup>
 
 </Project>
