--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           context: .
           file: ./IdentityProxy.Api/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/${{ github.repository}}:${{ steps.tag_name.outputs.TAG_NAME }},ghcr.io/${{ github.repository}}:latest
 
