--- a/src/SvRooij.Testcontainers.IdentityProxy/SvRooij.Testcontainers.IdentityProxy.csproj
+++ b/src/SvRooij.Testcontainers.IdentityProxy/SvRooij.Testcontainers.IdentityProxy.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-	<None Include="..\LICENSE.txt" Pack="true" PackagePath="\LICENSE.txt" />
-	<None Include="..\README.md" Pack="true" PackagePath="\README.md" />
+	<None Include="..\..\LICENSE.txt" Pack="true" PackagePath="\LICENSE.txt" />
+	<None Include="..\..\README.md" Pack="true" PackagePath="\README.md" />
   </ItemGroup>
 
 </Project>
