--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 👨‍🔧 Setup .NET Core SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.x
+          dotnet-version: 10.x
 
       - name: 🐳 Build Docker image
         run: docker build -t svrooij/identityproxyapi:test -f ./IdentityProxy.Api/Dockerfile .
@@ -83,6 +83,7 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
     if: startsWith(github.ref, 'refs/tags/')
     needs: build-docker
     steps:
@@ -92,7 +93,7 @@ jobs:
     - name: 👨‍🔧 Setup .NET Core SDK
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.x
+        dotnet-version: 10.x
 
     - name: 🔍 Enable problem matchers
       run: echo "::add-matcher::.github/matchers/dotnet.json"
