--- a/src/IdentityProxy.Api/IdentityProxy.Api.csproj
+++ b/src/IdentityProxy.Api/IdentityProxy.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -12,7 +12,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.14.0" />
+	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+	<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.15.0" />
+	<PackageReference Include="Scalar.AspNetCore" Version="2.11.0" />
   </ItemGroup>
 
 </Project>
