--- a/src/IdentityProxy.Api/IdentityProxy.Api.csproj
+++ b/src/IdentityProxy.Api/IdentityProxy.Api.csproj
@@ -9,12 +9,14 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	<StripSymbols>true</StripSymbols>
 	<OptimizationPreference>Speed</OptimizationPreference>
+	<DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
 	<PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.15.0" />
-	<PackageReference Include="Scalar.AspNetCore" Version="2.11.0" />
+	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
+	<PackageReference Include="Scalar.AspNetCore" Version="2.12.1" />
   </ItemGroup>
 
 </Project>
