ci: Label map adjusted

--- a/.github/workflows/auto-label-pr.yml
+++ b/.github/workflows/auto-label-pr.yml
@@ -71,7 +71,7 @@ jobs:
               'feat': 'enhancement',
               'ci': 'ci',
               'test': 'test',
-              'docs': 'docs',
+              'docs': 'documentation',
               'deps': 'dependency',
             };
 
